# MyTodo

./: .gitignore  CMakeLists.txt  README.md  assets.qrc  main.py  pyproject.toml  pysidedeploy.spec  requirements.txt
Installer/config/: config.xml
Source/: history.cpp
Source/db/: History.txt  currentTodos.db
Source/headers/: Edit_todo.h  add_todo.h  control_unit.h  database.h  edit_todo.h  helper.h  history.h  mainwindow.h  reminder.h  timetable.h  todo.h
Source/installer/Windows/config/: config.xml
Source/src/: add_todo.cpp  control_unit.cpp  database.cpp  edit_todo.cpp  helper.cpp  history.cpp  main.cpp  mainwindow.cpp  reminder.cpp  timetable.cpp  todo.cpp
Source/tests/: control_system_tests.cpp  todo_tests.cpp
Source/ui/: Edit_todo.ui  add_todo.ui  edit_todo.ui  history.ui  mainwindow.ui
src/: CalendarEventWidget.py  MainWindow.py  WeeklyTimetable.py  achievement.py  add_todo.py  asr_pipeline.py  calandar_event.py  checkin_dashboard.py  control_unit.py  database.py  edit_todo.py  helper.py  lightweight_table_model.py  list_view.py  monthly_timetable.py  record_dialog.py  reminder.py  todo.py  todo_timeline.py  ui_colors.py
ui/: CalendarWidget.py  add_todo.ui  edit_todo.ui  history.ui  listview.ui  mainwindow.ui  monthly_view.ui  single_day_cell.ui  timetable.ui  ui_add_todo.py  ui_edit_todo.py  ui_history.py  ui_listview.py  ui_mainwindow.py  ui_monthly_view.py  ui_single_day_cell.py  ui_timetable.py
